[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required!
  "versioningit",
]

[project]
name = "node-blue"
description = """\
  Node-RED without a mouse / Node-RED as a library / Write Node-RED flows in YAML / Efficient test harnesses for \
  Node-RED / Headless Node-RED / Improved development cycle times / Now it all makes sense\
  """
readme = "README.md"
keywords = [
  "automation",
  "flow-programming",
  "javascript",
  "json",
  "JSPyBridge",
  "node-blue",
  "node-red",
  "yaml",
]
license = "Apache-2.0"
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Object Brokering",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Benchmark",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Hardware",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "click<9",
  "colorama<1",
  "colorlog<7",
  "funcy<3",
  "javascript==1!1.2.6",
  "json5<1",
  "pygments<3",
  "pyyaml<7",
  "requests<3",
  "runs<2",
  "tabulate<1",
]
optional-dependencies.develop = [
  "munch<5",
  "mypy<2.3",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "types-tabulate",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "coverage<8",
  "pytest<10",
  "pytest-asyncio",
  "pytest-mqtt",
  "pytest-repeat",
]
urls.changelog = "https://github.com/daq-tools/node-blue/blob/main/CHANGES.md"
urls.documentation = "https://github.com/daq-tools/node-blue"
urls.homepage = "https://github.com/daq-tools/node-blue"
urls.repository = "https://github.com/daq-tools/node-blue"
scripts.node-blue = "node_blue.cli:cli"

[tool.setuptools]
packages.find.namespaces = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
extend-exclude = [
  # Always.
  ".venv*",
  "example_*",
  # Temporary
  "workbench.py",
]
lint.ignore = [
  "E722", # Do not use bare `except`
]

[tool.mypy]
packages = [ "node_blue" ]
exclude = []
ignore_missing_imports = true
check_untyped_defs = true
implicit_optional = true
install_types = true
non_interactive = true

[tool.pytest]
ini_options.minversion = "2.0"
ini_options.testpaths = [ "droste", "examples", "node_blue", "tests" ]
ini_options.addopts = "-rsfEX -p pytester --strict-markers --verbosity=3 --capture=no"
ini_options.markers = [
  "capmqtt_decode_utf8",
]
ini_options.xfail_strict = true
ini_options.log_format = "%(asctime)-15s [%(name)-24s] %(levelname)-7s: %(message)s"
ini_options.log_level = "DEBUG"
ini_options.log_cli = true  # Enable to receive way more log details on stdout.
ini_options.log_cli_level = "DEBUG"

[tool.coverage]
run.branch = false
run.source = [ "droste", "node_blue" ]
report.fail_under = 0
report.show_missing = true

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"

[tool.poe]
tasks.format = [
  { cmd = "ruff format" },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff check ." },
  { cmd = "pyproject-fmt --check pyproject.toml" },
  { cmd = "mypy" },
]
tasks.test = [
  { cmd = "node-blue setup" },
  { cmd = "pytest" },
]
tasks.coverage = [
  { cmd = "coverage run pytest" },
  { cmd = "coverage xml" },
  { cmd = "coverage report" },
]
tasks.build = { cmd = "python -m build" }
tasks.check = [ "lint", "test" ]
